--- a/#src/templates/theme/includes/card.html
+++ b/#src/templates/theme/includes/card.html
@@ -1,4 +1,35 @@
-{% load static %} {% load thumbnail %} {% if product.catalog %}
+{% load static %} {% load thumbnail %}
+{% if product.catalog %}
+<div class="index-catalog__card card" itemscope itemtype="https://schema.org/Product">
+  <div class="card__image" {% if product.type_image %}style="height: auto;" {% endif %}>
+    {% if product.image %}
+    {% if product.type_image %}
+    <img src="{{ product.image.url }}" alt="{{ product.name }}" title="{{ product.name }}" itemprop="image" />
+    {% else %}
+    {% thumbnail product.image "368x350" format="WEBP" crop="center" as im %}
+    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ product.name }}"
+      title="{{ product.name }}" style="height: 100%" itemprop="image" />
+    {% endthumbnail %}
+    {% endif %}
+    {% else %}
+    <img src="{% static 'theme/mb/images/no-image.png' %}" alt="{{ product.name }}" title="{{ product.name }}" />
+    {% endif %}
+  </div>
+  <div class="card__content">
+    <a href="{{ product.get_absolute_url }}" class="card__content-title" itemprop="name">{{ product.model }}</a>
+    {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p
+      class="card__content-char">Материал: {{ chr }}</p>
+      {% endif %} {% endfor %}
+      <div class="card__content-price" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
+        <span itemprop="price" content="{{ product.price }}">{{ product.price }}</span>
+        <span itemprop="priceCurrency" content="RUB">₽</span>
+      </div>
+  </div>
+  <a href="{{ product.get_absolute_url }}" class="card__content-link">Выбрать конфигурацию</a>
+</div>
+{% endif %}
+
+{% if not product.catalog %}
 <div class="index-catalog__card card" itemscope itemtype="https://schema.org/Product">
   <div class="card__image" {% if product.type_image %}style="height: auto;" {% endif %}>
     {% if product.image %}
