--- a/#src/templates/theme/includes/card.html
+++ b/#src/templates/theme/includes/card.html
@@ -46,7 +46,7 @@
     {% endif %}
   </div>
   <div class="card__content">
-    <a href="{{ product.get_absolute_url }}" class="card__content-title" itemprop="name">{{ product.model }}</a>
+    <a href="{{ product.get_absolute_url }}" class="card__content-title" itemprop="name">{{ product.name }}</a>
     {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p
       class="card__content-char">Материал: {{ chr }}</p>
       {% endif %} {% endfor %}
