--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -63,6 +63,14 @@
           </div>
           <p class="service-page__item-text">Гравировка на памятнике</p>
         </a>
+        <a href="{% url 'service_grav' %}" class="service-page__item"
+          style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
+          <div class="service-page__icon">
+            <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="Гравировка на памятнике"
+              title="Гравировка на памятнике" />
+          </div>
+          <p class="service-page__item-text">Гравировка на памятнике</p>
+        </a>
       </div>
     </div>
   </section>
