--- a/main/core/theme/mb/templates/pages/service/service.html
+++ b/main/core/theme/mb/templates/pages/service/service.html
@@ -63,13 +63,13 @@
           </div>
           <p class="service-page__item-text">Гравировка на памятнике</p>
         </a>
-        <a href="{% url 'service_grav' %}" class="service-page__item"
+        <a href="{% url 'service_model' %}" class="service-page__item"
           style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
           <div class="service-page__icon">
             <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="Гравировка на памятнике"
               title="Гравировка на памятнике" />
           </div>
-          <p class="service-page__item-text">Гравировка на памятнике</p>
+          <p class="service-page__item-text">3D моделирование</p>
         </a>
       </div>
     </div>
