--- a/#src/templates/theme/pages/service/service_model.html
+++ b/#src/templates/theme/pages/service/service_model.html
@@ -40,7 +40,7 @@
 
           </h1>
           <p class="hero__subtitle">
-            разработка эскизов памятников и могил
+            разработка эскизов памятников и могил в Томске по доступной цене
           </p>
           <div class="hero__buttons">
             <button type="button" class="hero__button hero__button--blue" data-popup="order-service"
