--- a/#src/templates/theme/pages/service/service_model.html
+++ b/#src/templates/theme/pages/service/service_model.html
@@ -16,7 +16,7 @@
   <div class="wrapper">
     <div class="hero">
       <div class="hero__container">
-        <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="Гравировка на памятнике Томск"
+        <img src="{% static 'theme/mb/images/3d_4.png' %}" alt="Гравировка на памятнике Томск"
           title="Гравировка на памятнике Томск" class="hero__image" />
         <div class="hero__inner">
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
