--- a/#src/templates/theme/pages/service/service_model.html
+++ b/#src/templates/theme/pages/service/service_model.html
@@ -17,7 +17,7 @@
     <div class="hero">
       <div class="hero__container">
         <img src="{% static 'theme/mb/images/3d_4.png' %}" alt="Гравировка на памятнике Томск"
-          title="Гравировка на памятнике Томск" class="hero__image" />
+          title="Гравировка на памятнике Томск" class="hero__image" style="width: auto" />
         <div class="hero__inner">
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
             <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
