--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -2,7 +2,8 @@
 <footer class="footer">
   <div class="footer__container">
     <div class="footer__inner">
-      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип" title="Логотип" /></div>
+      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип"
+          title="Логотип" /></div>
       <div class="footer__menu">
         <ul class="footer__list">
           <li class="footer__item--first">Памятники</li>
@@ -56,7 +57,8 @@
       </div>
     </div>
     <div class="footer__author">
-      <a href="https://xn----7sbah6bllcobpj.xn--p1ai/" target="_blank">Сайт разработан - РА Аврора</a>
+      <a href="https://аврора-томск.рф/sozdanie-sajtov/">Разработка и продвижение сайта</a> <a
+        href="https://аврора-томск.рф">РА Аврора</a>
     </div>
   </div>
 </footer>
