--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -145,6 +145,10 @@
   }
 }
 
+.category-detail__text {
+  padding: 0px 0px 60px;
+}
+
 .filter {
   // height: calc(100vh - 185px);
   // overflow-y: auto;
