--- a/main/core/theme/mb/templates/pages/catalog/category-details.html
+++ b/main/core/theme/mb/templates/pages/catalog/category-details.html
@@ -93,5 +93,12 @@
       </div>
     </div>
   </section>
+  <div class="category-detail__text">
+    <div class="category-detail__container">
+      <div class="text">
+        {{category.description|safe}}
+      </div>
+    </div>
+  </div>
 </main>
 {% endblock content %}
