--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -49,6 +49,7 @@ $mobileSmall: 479px; // Телефоны S
 $responsiveType: 1;
 
 body {
+  font-size: 16px;
 
   // overflow-x: hidden;
   // Скролл заблокирован
@@ -58,6 +59,30 @@ body {
 
   // Сайт загружен
   .loaded & {}
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.1875rem;
+}
+
+h4 {
+  font-size: 1rem;
+}
+
+h5 {
+  font-size: 0.875rem;
+}
+
+h6 {
+  font-size: 0.75rem;
 }
 
 // Оболочка ============================================================================================================================================================================================================================================================================================================================================================================================================================================
