--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -153,8 +153,33 @@
       margin-bottom: 15px;
     }
 
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
     h2 {
-      font-size: inherit;
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+    }
+
+    h3 {
+      font-size: 1.1875rem;
+      margin-bottom: 20px;
+    }
+
+    h4 {
+      margin-bottom: 20px;
+      font-size: 1rem;
+    }
+
+    h5 {
+      font-size: 0.875rem;
+      margin-bottom: 20px;
+    }
+
+    h6 {
+      font-size: 0.75rem;
       margin-bottom: 20px;
     }
   }
