--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3351,8 +3351,33 @@ body::after {
   margin-bottom: 15px;
 }
 
+.category-detail__text .text h1 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
 .category-detail__text .text h2 {
-  font-size: inherit;
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+
+.category-detail__text .text h3 {
+  font-size: 1.1875rem;
+  margin-bottom: 20px;
+}
+
+.category-detail__text .text h4 {
+  margin-bottom: 20px;
+  font-size: 1rem;
+}
+
+.category-detail__text .text h5 {
+  font-size: 0.875rem;
+  margin-bottom: 20px;
+}
+
+.category-detail__text .text h6 {
+  font-size: 0.75rem;
   margin-bottom: 20px;
 }
 
