--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -154,32 +154,32 @@
     }
 
     h1 {
-      font-size: 2rem;
+      font-size: 32px;
       margin-bottom: 20px;
     }
 
     h2 {
-      font-size: 1.5rem;
+      font-size: 24px;
       margin-bottom: 20px;
     }
 
     h3 {
-      font-size: 1.1875rem;
+      font-size: 19px;
       margin-bottom: 20px;
     }
 
     h4 {
-      margin-bottom: 20px;
+      margin-bottom: 16px;
       font-size: 1rem;
     }
 
     h5 {
-      font-size: 0.875rem;
+      font-size: 14px;
       margin-bottom: 20px;
     }
 
     h6 {
-      font-size: 0.75rem;
+      font-size: 12px;
       margin-bottom: 20px;
     }
   }
