--- a/#src/scss/pages/catalog/category-details.scss
+++ b/#src/scss/pages/catalog/category-details.scss
@@ -189,6 +189,8 @@
       margin-left: 25px;
 
       li {
+        line-height: 150%;
+
         &:not(:last-child) {
           margin-bottom: 10px;
         }
