--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3387,6 +3387,11 @@ body::after {
   margin-left: 25px;
 }
 
+.category-detail__text .text ul li,
+.category-detail__text .text ol li {
+  line-height: 150%;
+}
+
 .category-detail__text .text ul li:not(:last-child),
 .category-detail__text .text ol li:not(:last-child) {
   margin-bottom: 10px;
