--- a/main/core/theme/mb/templates/includes/card.html
+++ b/main/core/theme/mb/templates/includes/card.html
@@ -20,12 +20,14 @@
     {% for chr in product.chars.all %} {% if chr.char_name.filter_name == "material" and forloop.counter <= 2 %} <p
       class="card__content-char">Материал: {{ chr }}</p>
       {% endif %} {% endfor %}
+      {% if product.price %}
       <div class="card__content-price" itemprop="offers" itemscope itemtype="https://schema.org/Offer">
         <span itemprop="price" content="{{ product.price }}">{{ product.price }}</span>
         <span itemprop="priceCurrency" content="RUB">₽</span>
         <meta itemprop="priceValidUntil" content="2029-12-31">
         <link itemprop="availability" href="http://schema.org/InStock" />
       </div>
+      {% endif %}
   </div>
   <a href="{{ product.get_absolute_url }}" class="card__content-link">Выбрать конфигурацию</a>
 </div>
