--- a/main/core/theme/mb/templates/pages/service/service_model.html
+++ b/main/core/theme/mb/templates/pages/service/service_model.html
@@ -78,7 +78,8 @@
                 </p>
               </div>
               <button type="button" class="service-content__btn _btn" data-popup="order-service"
-                data-order="3d-модель">Заказать 3D-модель</button>
+                data-order="3d-модель">Заказать</button>
+              <a href="/gallery-category/memorialnye-kompleksy/">Смотреть все</a>
             </div>
           </div>
         </div>
