--- a/main/core/theme/mb/templates/pages/service/service_model.html
+++ b/main/core/theme/mb/templates/pages/service/service_model.html
@@ -77,9 +77,11 @@
                   или памятника, посмотрите настоящие работы выполненные нашими специалистами.
                 </p>
               </div>
-              <button type="button" class="service-content__btn _btn" data-popup="order-service"
-                data-order="3d-модель">Заказать</button>
-              <a href="/gallery-category/memorialnye-kompleksy/">Смотреть все</a>
+              <div class="service-content__buttons">
+                <button type="button" class="service-content__btn _btn" data-popup="order-service"
+                  data-order="3d-модель">Заказать</button>
+                <a href="/gallery-category/memorialnye-kompleksy/" class="service-content__btn _btn">Смотреть все</a>
+              </div>
             </div>
           </div>
         </div>
