--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -2,14 +2,14 @@
 <footer class="footer">
   <div class="footer__container">
     <div class="footer__inner">
-      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип"
-          title="Логотип" /></div>
+      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип" title="Логотип" /></div>
       <div class="footer__menu">
         <ul class="footer__list">
           <li class="footer__item--first">Памятники</li>
           {% if category_menu %} {% for category in category_menu %}
           <li class="footer__item"><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
           {% endfor %} {% endif %}
+          <li class="footer__item"><a href="/media/{{ catalog_pdf.download_catalog }}" download>Скачать каталог</a></li>
         </ul>
         <ul class="footer__list">
           <li class="footer__item--first">Услуги</li>
@@ -56,9 +56,6 @@
         </div>
       </div>
     </div>
-    <div class="footer__author">
-      <a href="https://аврора-томск.рф/sozdanie-sajtov/">Разработка и продвижение сайта</a> <a
-        href="https://аврора-томск.рф">РА Аврора</a>
-    </div>
+    <div class="footer__author"><a href="https://аврора-томск.рф/sozdanie-sajtov/">Разработка и продвижение сайта</a> <a href="https://аврора-томск.рф">РА Аврора</a></div>
   </div>
 </footer>
