--- a/main/core/admin/templates/shop/settings.html
+++ b/main/core/admin/templates/shop/settings.html
@@ -17,6 +17,10 @@
         <div class="page-content__row">
           <div class="page-content__onecol">
             <div class="form__group">
+              <label for="{{ form.download_catalog.id_for_label }}" class="form__controls-label"> PDF каталог : </label>
+              {{ form.download_catalog }} {{ form.download_catalog.errors }}
+            </div>
+            <div class="form__group">
               <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> Заголовок h1 : </label>
               {{ form.meta_h1 }} {{ form.meta_h1.errors }}
             </div>
@@ -32,8 +36,7 @@
               {{ form.meta_description }} {{ form.meta_description.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords :
-              </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords : </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
           </div>
