--- a/main/core/theme/mb/templates/pages/service/service_model.html
+++ b/main/core/theme/mb/templates/pages/service/service_model.html
@@ -3,9 +3,10 @@
 3D - модели памятников в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Закажите качественную гравировку на памятник в Томске.
-Мы создаем точные и долговечные надписи, которые сохранят память на долгие годы.
-Индивидуальный подход к каждому заказу, высокий уровень исполнения и внимание к деталям.
+Закажите 3D-модель памятника в Томске.
+Изготовим макет любой сложности. Доставим и установим готовую конструкцию. Заказать 3D-модель можно по номеру +7(900)
+921-09-15 и +7(903) 955-40-18
+или на нашем сайте
 {% endblock %}
 {% block keywords %}
 гравировка, гравировка томск, гравировка на памятник
