--- a/#src/templates/theme/pages/service/service_model.html
+++ b/#src/templates/theme/pages/service/service_model.html
@@ -3,9 +3,10 @@
 3D - модели памятников в Томске | Акрополь
 {% endblock %}
 {% block description %}
-Закажите качественную гравировку на памятник в Томске.
-Мы создаем точные и долговечные надписи, которые сохранят память на долгие годы.
-Индивидуальный подход к каждому заказу, высокий уровень исполнения и внимание к деталям.
+Закажите 3D-модель памятника в Томске.
+Изготовим макет любой сложности. Доставим и установим готовую конструкцию. Заказать 3D-модель можно по номеру +7(900)
+921-09-15 и +7(903) 955-40-18
+или на нашем сайте
 {% endblock %}
 {% block keywords %}
 гравировка, гравировка томск, гравировка на памятник
@@ -77,8 +78,11 @@
                   или памятника, посмотрите настоящие работы выполненные нашими специалистами.
                 </p>
               </div>
-              <button type="button" class="service-content__btn _btn" data-popup="order-service"
-                data-order="3d-модель">Заказать 3D-модель</button>
+              <div class="service-content__buttons">
+                <button type="button" class="service-content__btn _btn" data-popup="order-service"
+                  data-order="3d-модель">Заказать</button>
+                <a href="/gallery-category/memorialnye-kompleksy/" class="service-content__btn _btn">Смотреть все</a>
+              </div>
             </div>
           </div>
         </div>
