--- a/#src/scss/pages/service/service-detail.scss
+++ b/#src/scss/pages/service/service-detail.scss
@@ -27,6 +27,8 @@
 
   &__inner {}
 
+
+
   // .service-content__title
 
   &__title {
@@ -56,6 +58,13 @@
     img {
       width: 520px;
       height: 400px;
+
+
+      @media screen and (max-width: 560px) {
+        width: 100%;
+        max-width: 100%;
+        height: 100%;
+      }
     }
   }
 
@@ -105,6 +114,19 @@
     }
   }
 
+  // .service-content__buttons
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    flex-wrap: wrap;
+
+    @media screen and (max-width: 425px) {
+      gap: 10px;
+    }
+  }
+
   // .service-content__btn
 
   &__btn {
@@ -113,6 +135,7 @@
 
     @media screen and (max-width: 425px) {
       width: 100%;
+      margin-top: 20px;
     }
   }
 }
