--- a/#src/templates/theme/pages/gallery.html
+++ b/#src/templates/theme/pages/gallery.html
@@ -73,6 +73,36 @@
       </div>
     </div>
   </section>
+  <div class="category-detail__text">
+    <div class="category-detail__container">
+      <div class="text">
+        <p>
+          Памятники, посвященные героям специальной военной операции (СВО), имеют особое значение для семей и близких
+          погибших. Они символизируют память о мужестве, героизме и самоотверженности наших солдат. В нашем каталоге
+          представлены разнообразные варианты памятников, включая гранитные, комбинированные и элитные модели, а также
+          мемориальные комплексы, которые могут стать достойным местом для увековечения памяти.
+        </p>
+        <p>
+          Для тех, кто ищет что-то особенное, мы предлагаем <a href="/category/elitnyie-modeli/">элитные модели</a>
+          памятников, выполненные с использованием высококачественных материалов и эксклюзивных дизайнов. Эти памятники
+          подчеркнут уникальность каждого героя и станут достойным олицетворением их подвига. Также мы предлагаем
+          разнообразные дизайны, включая <a href="/service/gravirovka/">гравировку</a>, позволяющую добавить
+          индивидуальные элементы.
+        </p>
+        <p>
+          Наша мастерская предлагает широкий ассортимент <a href="/category/">памятников</a>, специализируясь на
+          индивидуальных заказах. Мы готовы помочь вам выбрать идеальный памятник участникам СВО, который будет нести в
+          себе память о героизме и мужестве. Наша команда опытных мастеров обеспечит высокое качество исполнения и
+          профессиональный подход к каждому проекту.
+        </p>
+        <p>
+          Не забудьте, что памятники погибшим на СВО должны быть не только красивыми, но и отражать личность вашего
+          близкого.
+        </p>
+        <!-- {{gallery.description|safe}} -->
+      </div>
+    </div>
+  </div>
   {% include "../includes/contact-block.html" %}
   {% include "../components/map.html" %}
 </main>
