--- a/#src/templates/theme/pages/service/service.html
+++ b/#src/templates/theme/pages/service/service.html
@@ -58,7 +58,7 @@
         <a href="{% url 'service_grav' %}" class="service-page__item"
           style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
           <div class="service-page__icon">
-            <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="Гравировка на памятнике"
+            <img src="{% static 'theme/mb/images/service-6.png' %}" alt="Гравировка на памятнике"
               title="Гравировка на памятнике" />
           </div>
           <p class="service-page__item-text">Гравировка на памятнике</p>
@@ -66,8 +66,7 @@
         <a href="{% url 'service_model' %}" class="service-page__item"
           style="background-image: url({% static 'theme/mb/images/texture.jpg' %})">
           <div class="service-page__icon">
-            <img src="{% static 'theme/mb/images/serice-5.png' %}" alt="Гравировка на памятнике"
-              title="Гравировка на памятнике" />
+            <img src="{% static 'theme/mb/images/service-7.png' %}" alt="3D моделирование" title="3D моделирование" />
           </div>
           <p class="service-page__item-text">3D моделирование</p>
         </a>
