--- a/main/core/admin/templates/shop/category/category_edit.html
+++ b/main/core/admin/templates/shop/category/category_edit.html
@@ -54,6 +54,10 @@
               {{ form.add_menu }} {{ form.add_menu.errors }}
               <label for="{{ form.add_menu.id_for_label }}" class="form__controls-label"> Отображать в меню ? :</label>
             </div>
+            <div class="form__group">
+              {{ form.related_categories }} {{ form.related_categories.errors }}
+              <label for="{{ form.related_categories.id_for_label }}" class="form__controls-label">Связанные категории :</label>
+            </div>
           </div>
         </div>
       </div>
