--- a/main/core/admin/templates/shop/product/product_add.html
+++ b/main/core/admin/templates/shop/product/product_add.html
@@ -117,6 +117,10 @@
               {{ form.status }} {{ form.status.errors }}
               <label for="{{ form.status.id_for_label }}" class="form__controls-label"> Опубликовать ? :</label>
             </div>
+            <div class="form__group">
+              <label for="{{ form.related_products.id_for_label }}" class="form__controls-label">Сопутствующий товар :</label>
+              {{ form.related_products }} {{ form.related_products.errors }}
+            </div>
           </div>
         </div>
       </div>
