--- a/#src/scss/pages/catalog/product.scss
+++ b/#src/scss/pages/catalog/product.scss
@@ -54,11 +54,29 @@
 
   // .product__related
   &__related {
-    margin-bottom: 180px;
+    margin-top: 100px;
 
     @media screen and (max-width: 620px) {
-      margin-bottom: 40px;
+      margin-top: 40px;
     }
+  }
+
+  //.product__related--top
+  &__related--top{
+    margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  //.product__related--link
+  &__related--link{
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    color: rgba($color: $accent, $alpha: 1.0);
+    margin: 40px 0px 40px 0px;
   }
 
   // .product__related-title
@@ -68,7 +86,6 @@
     font-size: 32px;
     font-weight: 500;
     line-height: 39px;
-    margin-bottom: 50px;
   }
 
   // .product__color
