--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3475,7 +3475,23 @@ body::after {
 }
 
 .product__related {
-  margin-bottom: 180px;
+  margin-top: 100px;
+}
+
+.product__related--top {
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.product__related--link {
+  display: flex;
+  justify-content: center;
+  font-size: 18px;
+  color: #41a2d0;
+  margin: 40px 0px 40px 0px;
 }
 
 .product__related-title {
@@ -3483,7 +3499,6 @@ body::after {
   font-size: 32px;
   font-weight: 500;
   line-height: 39px;
-  margin-bottom: 50px;
 }
 
 .product__color {
@@ -4656,7 +4671,7 @@ body::after {
   }
 
   .product__related {
-    margin-bottom: 40px;
+    margin-top: 40px;
   }
 
   .product-card__image img {
