--- a/#src/templates/theme/pages/catalog/product.html
+++ b/#src/templates/theme/pages/catalog/product.html
@@ -162,6 +162,9 @@
           {{ related_product.name }}
           {% include "../../includes/card.html" with product=related_product %}
           {% endfor %}
+          {% for product in products %}
+          {% include "../../includes/card.html" with product=product %}
+          {% endfor %}
         </div>
       </div>
       {% else %}
