--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -158,7 +158,7 @@
       </div>
       {% endif %}
 
-<!--      {{ product.related_products.all }}-->
+      {{ product.related_products.all }}
 
       {% if product.related_products.all %}
       <div class="product__related">
