--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -184,7 +184,8 @@
       <div class="index-reviews__inner">
         <div class="index-reviews__info">
           <p class="index-reviews__text">Мы будем очень рады получить Вашу обратную связь</p>
-          <button type="button" class="reviews__btn _btn" data-popup="reviews">Оставить отзыв</button>
+          <a href="https://2gis.ru/tomsk/search/%D0%B0%D0%BA%D1%80%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C%20%D1%82%D0%BE%D0%BC%D1%81%D0%BA/firm/70000001020920165/84.969766%2C56.492936/tab/reviews?m=84.987737%2C56.48199%2F12.22"
+             class="reviews__btn _btn" target="_blank">Оставить отзыв</a>
         </div>
         <!-- Тут доделать слайдер -->
         <div class="index-reviews__reviews reviews">
