--- a/main/core/admin/templates/components/admin-sidebar.html
+++ b/main/core/admin/templates/components/admin-sidebar.html
@@ -303,7 +303,7 @@
           <ul>
             <li><a href="{% url 'gallery_settings' %}">Настройки галереи</a></li>
             <li><a href="{% url 'admin_gallery_category' %}">Список категорий</a></li>
-            <li><a href="{% url 'admin_reviews_add' %}">Добавить категорию</a></li>
+            <li><a href="{% url 'gallery_category_add' %}">Добавить категорию</a></li>
             <li><a href="{% url 'admin_gallery' %}">Список фотографий</a></li>
             <li><a href="{% url 'admin_gallery_add' %}">Добавить фотографию</a></li>
           </ul>
