--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -197,3 +197,45 @@
 </main>
 
 {% endblock content %}
+
+<div class="g-header__top ">
+  <div class="container-fluid">
+    <div class="g-header__top-inner">
+      <span class="c-header__city" type="button" data-toggle="modal" data-target="#modal-location">
+        <span class="c-header__city-text">Томск</span></span>
+      <div class="c-header__top-nav">
+        <div style="display: none!important;">48</div>
+        <ul class="c-header__top-list ul-clear">
+          <li class="c-header__top-list-item">
+            <a href="/prise">Цены</a>
+          </li>
+          <li class="c-header__top-list-item">
+            <a href="/about" rel="nofollow">О Компании</a>
+          </li>
+          <li class="c-header__top-list-item">
+            <a href="/blog">Полезная информация</a>
+          </li>
+          <li class="c-header__top-list-item">
+            <a href="/specialisty" rel="nofollow">Специалисты</a>
+          </li>
+          <li class="c-header__top-list-item">
+            <a href="/licenzii" rel="nofollow">Лицензии</a>
+          </li>
+          <li class="c-header__top-list-item">
+            <a href="/contacts">Контакты</a>
+          </li>
+
+        </ul>
+
+        <a class="header__link d-block d-xl-none" href="/payment/">Онлайн оплата</a>
+        <div class="c-header__top-search">
+          <button type="button" data-toggle="modal" data-target="#modal-search">
+            <svg class="svg-sprite-icon svg-sprite-icon-search ">
+              <use xlink:href="#icon-search"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
