--- a/main/core/admin/css/style.css
+++ b/main/core/admin/css/style.css
@@ -172,7 +172,7 @@ ol {
   border: 1px solid rgba(38, 53, 61, 0.1);
   background-color: white;
   height: 80px;
-  display: flex;
+  display: none;
   align-items: center;
 }
 
@@ -329,7 +329,7 @@ ol {
 }
 
 .page {
-  padding: 80px 0px 0px 280px;
+  padding: 0px 0px 0px 280px;
 }
 
 .page__inner {
@@ -347,6 +347,12 @@ ol {
 }
 
 .page__head-tab {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.page__head-right {
   display: flex;
   align-items: center;
   gap: 20px;
