--- a/main/core/admin/templates/gallery/gallery_settings.html
+++ b/main/core/admin/templates/gallery/gallery_settings.html
@@ -3,10 +3,12 @@
   <div class="page__inner">
     <form action="." method="POST" class="form" enctype="multipart/form-data">
       <div class="page__head">
-        <div class="page__head-save">
-          <h1 class="page__title">Настройки блога</h1>
+        <div class="page__head-tab">
+          <h1 class="page__title">Настройки</h1>
+        </div>
+        <div class="page__head-right">
           <button type="submit" class="form__btn">
-            <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
+            <img src="/core/theme/mb/images/admin/save.svg" alt="">
             Сохранить
           </button>
         </div>
@@ -32,7 +34,8 @@
               {{ form.meta_description }} {{ form.meta_description.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords : </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords :
+              </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
           </div>
