--- a/main/core/admin/templates/shop/product/product_add.html
+++ b/main/core/admin/templates/shop/product/product_add.html
@@ -16,11 +16,13 @@
           <button type="button" data-name="seo" class="page__head-btn">Поля SEO</button>
           <button type="button" data-name="char" class="page__head-btn">Характеристики</button>
         </div>
-        <a href="{% url 'product_add' %}">Добавить новый</a>
-        <button type="submit" class="form__btn">
-          <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
-          Сохранить
-        </button>
+        <div class="page__head-right">
+          <a href="{% url 'product_add' %}">Добавить новый</a>
+          <button type="submit" class="form__btn">
+            <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
+            Сохранить
+          </button>
+        </div>
       </div>
       {% csrf_token %}
       <div class="page-content _show" id="basic">
