--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -616,6 +616,13 @@ html.lock body::before {
   margin-bottom: 20px;
 }
 
+.index-work__inner {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  min-width: 0;
+}
+
 .index-work__links {
   display: flex;
   align-items: center;
@@ -659,6 +666,7 @@ html.lock body::before {
 
 .index-work__slider {
   position: relative;
+  max-width: 100%;
 }
 
 .index-work__slide {
@@ -668,12 +676,6 @@ html.lock body::before {
   max-height: 400px;
   overflow: hidden;
   border-radius: 10px;
-}
-
-.index-work__slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 .index-work__next,
@@ -691,6 +693,18 @@ html.lock body::before {
 .index-work__prev::after {
   font-size: 14px;
   color: white;
+}
+
+.reviews-gis {
+  width: 100%;
+}
+
+.reviews-gis iframe {
+  width: 100%;
+}
+
+.reviews-gis .bigWidget {
+  padding: 0px 20px !important;
 }
 
 .index-reviews {
@@ -4313,6 +4327,12 @@ body::after {
 }
 
 @media screen and (min-width: 1200px) {
+  .index-work__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
   .category-details__col .close {
     display: none;
   }
@@ -4425,6 +4445,12 @@ body::after {
 @media screen and (max-width: 990px) {
   .index-stock__item {
     min-height: 250px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .index-work__inner {
+    flex-direction: column;
   }
 }
 
